--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lauren And Evan></title>
+    <title>Lauren And Evan</title>
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="main.css">
 </head>
-<body>
-    
+<body> 
+    <div class="container">
+        <h1 class="title">Evan And Lauren</h1>
+        <div class="button-container">
+            <button class="button" href="http://map.lauren-evan.xyz">Maps</button>
+            <button class="button" href="http://movies.lauren-evan.xyz">Movies</button>
+        </div>
+    </div>
+    <script src="main.js"></script>
 </body>
 </html>
