added links to button

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="container">
         <h1 class="title">Evan And Lauren</h1>
         <div class="button-container">
-            <button class="button" href="http://map.lauren-evan.xyz">Maps</button>
-            <button class="button" href="http://movies.lauren-evan.xyz">Movies</button>
+            <button class="button" onclick="window.location='http://map.lauren-evan.xyz'">Maps</button>
+            <button class="button" onclick="window.location='http://movies.lauren-evan.xyz'">Movies</button>
         </div>
     </div>
     <script src="main.js"></script>
